@@ -729,6 +729,10 @@ LAG_CREDIT 0.5
 # but not more than this much credit is given for a single event.
 LAG_CREDIT_SINGLE 0.1
 
+# and not more than this multiple of the measured lag variance of all clients.
+# (Set to 0 to disable this clamping.)
+LAG_CREDIT_VARIANCE 3.0
+
 # Lag credit is not something that is available once. Just like rubber, lag credit
 # is refilled over time. This variable tells you how long it takes before a completely
 # used up lag credit takes to completely refill. 
