@@ -452,7 +452,7 @@ static char const * sn_versionString[] =
         "0.2.8.2", // 13
         "0.2.8.3_alpha", // 14
         "0.2.8.3_alpha_auth", // 15
-        "0.2.8.3", // 16
+        "0.2.8.3_beta2", // 16
         "0.2.8.4", // 17
         "0.2.8.5_alpha", // 18
         "0.2.8.5", // 19
