@@ -167,8 +167,8 @@ class nVersionFeature
 {
 public:
     nVersionFeature( int min, int max = -1 ); // creates a feature that is supported from version min to max; values of -1 indicate no border
-    bool Supported();                         // returns whether this feature is supported by everyone
-    bool Supported( int client );             // returns whether this feature is supported by a certain client ( resp. the server in client mode )
+    bool Supported() const;                   // returns whether this feature is supported by everyone
+    bool Supported( int client ) const;       // returns whether this feature is supported by a certain client ( resp. the server in client mode )
 private:
     int min_, max_;
 };
